[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"